UI Updated With MudBlazor

--- a/EmployeeUI/Components/Layout/MainLayout.razor
+++ b/EmployeeUI/Components/Layout/MainLayout.razor
@@ -8,7 +8,11 @@
     <MudPopoverProvider />
 
     @* Needed for dialogs *@
-    <MudDialogProvider />
+    <MudDialogProvider FullWidth="true" MaxWidth="MaxWidth.Small"
+                       CloseButton="true"
+                       BackdropClick="false"
+                       Position="DialogPosition.Center"
+                       CloseOnEscapeKey="true" />
 
     @* Needed for snackbars *@
     <MudSnackbarProvider />
